<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocup_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="juancarlos.serrano@urjc.es">Juanca</maintainer>
  <license>Apache License, Version 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_cascade_lifecycle</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>backward_ros</depend>

  <exec_depend>arm</exec_depend>
  <exec_depend>configuration</exec_depend>
  <exec_depend>hri</exec_depend>
  <exec_depend>motion</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>launch_pal</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
